# proyecto-baches-hmo

./: README.md  bachometro_hmo_api_tests.ipynb
baches_hmo/: Makefile  README.md  pyproject.toml
baches_hmo/baches_hermosillo/: __init__.py  dataset.py  features.py  plots.py
baches_hmo/baches_hermosillo/modeling/: predict.py  train.py
baches_hmo/docs/: mkdocs.yml
baches_hmo/docs/docs/: index.md
