[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "baches_hermosillo"
version = "0.0.1"
description = "Buscaremos una correlaci\u00f3n entre las baches de Hermosillo y el mapa de Hermosillo por AGEB's"
authors = [
  { name = "Sebasti\u00e1n Browarski, Fernando Martinez, Jes\u00fas Sol\u00eds" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["baches_hermosillo"]
force_sort_within_sections = true
